[package]
name = "halo2_proof"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_matches = "1.5.0"
group = "0.13.0"
halo2_proofs = "0.3.0"
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.215", features = ["derive"] }
serde_derive = "1.0.215"
serde_json = "1.0.133"
wasm-bindgen = "0.2.81"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.7"
rayon = "1.5"
wasm-bindgen-rayon = { version = "1.0" }
web-sys = { version = "0.3", features = ["Request", "Window", "Response"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
